opam-version: "2.0"
version: "v0.16.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/accessor_base"
bug-reports: "https://github.com/janestreet/accessor_base/issues"
dev-repo: "git+https://github.com/janestreet/accessor_base.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/accessor_base/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"         {>= "4.14.0"}
  "accessor"      {>= "v0.16" & < "v0.17"}
  "base"          {>= "v0.16" & < "v0.17"}
  "higher_kinded" {>= "v0.16" & < "v0.17"}
  "ppx_accessor"  {>= "v0.16" & < "v0.17"}
  "ppx_jane"      {>= "v0.16" & < "v0.17"}
  "dune"          {>= "2.0.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Accessors for Base types, for use with the Accessor library"
description: "
This library provides accessors for numerous types in Base.
"
