opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/accessor_base"
bug-reports: "https://github.com/janestreet/accessor_base/issues"
dev-repo: "git+https://github.com/janestreet/accessor_base.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/accessor_base/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "accessor"
  "base"
  "higher_kinded"
  "ppx_accessor"
  "ppx_jane"
  "dune"          {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Accessors for Base types, for use with the Accessor library"
description: "
This library provides accessors for numerous types in Base.
"
